# web-manim

./: .gitignore  README.md  pyproject.toml  setup.py  upload.sh
example_scenes/: dijkstra.py  square.py
manim/: __init__.py  constants.py
manim/_config/: __init__.py  logger_utils.py  utils.py
manim/camera/: camera.py
manim/mobject/: graph.py  matrix.py  mobject.py  table.py  utils.py  vector_field.py
manim/mobject/geometry/: arc.py  line.py  polygram.py  shape_matchers.py  tips.py
manim/mobject/graphing/: coordinate_systems.py  functions.py  number_line.py  probability.py
manim/mobject/opengl/: opengl_surface.py  opengl_three_dimensions.py
manim/mobject/svg/: brace.py  svg_mobject.py
manim/mobject/text/: numbers.py  tex_mobject.py  text_mobject.py
manim/mobject/three_d/: three_dimensions.py
manim/mobject/types/: point_cloud_mobject.py  vectorized_mobject.py
manim/renderer/: web_renderer.py
manim/scene/: moving_camera_scene.py  scene.py  scene_file_writer.py
manim/utils/: file_ops.py  images.py  paths.py
