[tool.poetry]
# name = "web-manim"
name = "manim"
version = "0.1.0"
description = ""
authors = ["tom11my <tommy11jo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "manim" },
]

[tool.poetry.dependencies]
# these are for when i remove the animation deps
# python = ">=3.9,<3.13"
# numpy = ">=1.26"
# Pillow = ">=9.1"
python = ">=3.9,<3.13"
click = ">=8.0"
cloup = ">=2.0.0"
dearpygui = { version = ">=1.0.0", optional = true }
decorator = ">=4.3.2"
importlib-metadata = {version = ">=3.6", python = "<=3.9"}  # Required to discover plugins
isosurfaces = ">=0.1.0"
jupyterlab = { version = ">=3.0.0", optional = true }
manimpango = ">=0.5.0,<1.0.0"  # Complete API change in 1.0.0
mapbox-earcut = ">=1.0.0"
moderngl = ">=5.0.0,<6.0.0"
moderngl-window = ">=2.0.0"
networkx = ">=2.6"
notebook = { version = ">=6.0.0", optional = true }
numpy = ">=1.26"
Pillow = ">=9.1"
pycairo = ">=1.13,<2.0.0"
pydub = ">=0.20.0"
Pygments = ">=2.0.0"
rich = ">=12.0.0"
scipy = ">=1.6.0"
screeninfo = ">=0.7"
skia-pathops = ">=0.7.0"
srt = ">=3.0.0"
svgelements = ">=1.8.0"
tqdm = ">=4.0.0"
typing-extensions = ">=4.0.0"
watchdog = ">=2.0.0"



[tool.poetry.group.dev.dependencies]
twine = "^5.0.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "F405"]

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"manim" = "manim.__main__:main"
"manimce" = "manim.__main__:main"
